# FirstGame

./: .gitignore  CMakeLists.txt  README.md
FirstGame/Resources/ResourceManager/: level0.txt  level1.txt  level10.txt  level11.txt  level12.txt  level13.txt  level14.txt  level15.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt  list_path_levels.txt  models_type_path.txt  shaders_type_path.txt
FirstGame/Resources/models/Alphabet/: 0.mtl  10.mtl  11.mtl  7.mtl  8.mtl  9.mtl
FirstGame/Resources/models/BlueCube/: BlueCube.mtl
FirstGame/Resources/models/BlueWon/: BlueWon.mtl
FirstGame/Resources/models/Blue_planet/: Blue_planet.mtl
FirstGame/Resources/models/Blue_unit/: Blue_unit.mtl
FirstGame/Resources/models/Button/: Button.mtl  ButtonDOWN.mtl
FirstGame/Resources/models/Capture_scale/: Capture_scale.mtl
FirstGame/Resources/models/CrBluePlanet/: CrBluePlanet.mtl
FirstGame/Resources/models/CrNeutralPlanet/: CrNeutralPlanet.mtl
FirstGame/Resources/models/CrRedPlanet/: CrRedPlanet.mtl
FirstGame/Resources/models/CreateMap/: CreateMap.mtl
FirstGame/Resources/models/DeleteDown/: DeleteDown.mtl
FirstGame/Resources/models/DeleteUp/: DeleteUp.mtl
FirstGame/Resources/models/HP_scale/: HPscale.mtl
FirstGame/Resources/models/Loading/: LoadScreen.mtl
FirstGame/Resources/models/MenuButton/: Menu_button.mtl
FirstGame/Resources/models/Neutral_planet/: Neutral_planet.mtl
FirstGame/Resources/models/Pause/: Pause.mtl
FirstGame/Resources/models/Planet/: untitled.mtl
FirstGame/Resources/shaders/: 1.2D_LINE_shader.fs  1.2D_LINE_shader.vs  1.area_shader.fs  1.area_shader.vs  1.basic_fragment_shader.fs  1.basic_vertex_shader.vs  1.button_shader.fs  1.button_shader.vs  1.stencil_basic_shader.vs
FirstGame/src/: AI.cpp  Button.cpp  Button.h  Camera.cpp  Camera.h  CreateObject.cpp  CustomDistance.h  Game.cpp  Game.h  Label.cpp  Label.h  ManuallyCreatedObject.cpp  ManuallyCreatedObject.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelTypes.h  Object.cpp  Object.h  ObjectAttributes.h  Planet.cpp  Planet.h  Profile.h  RenderEngine.cpp  RenderEngine.h  ResourceManager.cpp  ResourceManager.h  SaveMap.cpp  SelectArea.cpp  SelectArea.h  Shader.h  Source.cpp  Statistic.h  Unit.cpp  Unit.h  Utilities.h  WhiteStar.h  main.cpp
includes/glad/: CMakeLists.txt
includes/glad/src/: glad.c
includes/glfw/examples/: INSTALL.vcxproj.filters  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj.filters  offscreen.vcxproj.filters  sharing.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
includes/glfw/src/: cmake_install.cmake  glfw3.pc
includes/glfw/tests/: INSTALL.vcxproj.filters  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  events.vcxproj.filters  icon.vcxproj  monitors.vcxproj  msaa.vcxproj  msaa.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  threads.vcxproj  timeout.vcxproj  timeout.vcxproj.filters  windows.vcxproj  windows.vcxproj.filters
(+131 files in other folders)
